--- a/package.json
+++ b/package.json
@@ -9,9 +9,21 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^2.0.85",
+    "@hookform/resolvers": "^5.2.2",
+    "@notionhq/client": "^5.4.0",
+    "@studio-freight/lenis": "^1.0.42",
+    "@studio-freight/react-lenis": "^0.0.47",
+    "ai": "^5.0.112",
+    "gsap": "^3.14.1",
     "next": "16.0.9",
+    "next-themes": "^0.4.6",
     "react": "19.2.1",
-    "react-dom": "19.2.1"
+    "react-dom": "19.2.1",
+    "react-hook-form": "^7.68.0",
+    "react-icons": "^5.5.0",
+    "resend": "^6.6.0",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@types/node": "^20",
