--- a/package.json
+++ b/package.json
@@ -12,10 +12,9 @@
     "@ai-sdk/openai": "^2.0.85",
     "@hookform/resolvers": "^5.2.2",
     "@notionhq/client": "^5.4.0",
-    "@studio-freight/lenis": "^1.0.42",
-    "@studio-freight/react-lenis": "^0.0.47",
     "ai": "^5.0.112",
     "gsap": "^3.14.1",
+    "lenis": "^1.3.16",
     "next": "16.0.9",
     "next-themes": "^0.4.6",
     "react": "19.2.1",
